before changing to own simulation package

--- a/notebooks/simulation/other_analyses/Explore-Simulated-Tensor.ipynb
+++ b/notebooks/simulation/other_analyses/Explore-Simulated-Tensor.ipynb
@@ -2,32 +2,29 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/hratch/anaconda3/envs/cci_dt/lib/python3.9/site-packages/scipy/optimize/minpack.py:828: OptimizeWarning: Covariance of the parameters could not be estimated\n",
-      "  warnings.warn('Covariance of the parameters could not be estimated',\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
+    "import os\n",
+    "import pickle\n",
+    "import numpy as np\n",
+    "import multiprocessing\n",
+    "\n",
     "import sys\n",
     "sys.path.insert(1, '../../../cell2cell/')\n",
     "import cell2cell as c2c\n",
     "from cell2cell.tensor.tensor import BaseTensor\n",
+    "from cell2cell.tensor.factorization import _compute_norm_error\n",
     "\n",
     "sys.path.insert(1, '../../../scripts/')\n",
     "from simulation.simulate import Simulate, CCI_MD\n",
     "\n",
     "\n",
     "# specify path to save figures\n",
-    "fig_path = '/data2/hratch/cci_dt/figures/'\n",
-    "data_path = '/data2/hratch/cci_dt/noise_v_error/'\n",
-    "version = 2"
+    "fig_path = ''#'/data2/hratch/cci_dt/figures/'\n",
+    "data_path = ''#'/data2/hratch/cci_dt/noise_v_error/'\n",
+    "version = 1"
    ]
   },
   {
@@ -179,15 +176,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "tensor.compute_tensor_factorization(rank=4)"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 45,
    "metadata": {},
    "outputs": [
@@ -205,278 +193,16 @@
     }
    ],
    "source": [
+    "tensor.compute_tensor_factorization(rank=4)\n",
     "fig, axes = c2c.plotting.tensor_factors_plot(interaction_tensor=tensor,\n",
     "                                             order_labels=['Time', 'Ligand-Receptor Pair', 'Sender Cell', 'Receiver Cell'],\n",
     "                                             #metadata = tensor.order_names,\n",
     "                                             #sample_col='Order',\n",
     "                                             #group_col='Element',\n",
     "                                             #meta_cmaps=['viridis', 'tab20', 'Pastel1', 'Pastel1'],\n",
-    "                                             fontsize=14#, filename=fig_path + 'TF_SIM_v' + str(version) + '.svg'\n",
-    "                                            )"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 46,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>cell_subcat</th>\n",
-       "      <th>LR_subcat</th>\n",
-       "      <th>ts_coordinates</th>\n",
-       "      <th>change</th>\n",
-       "      <th>pattern</th>\n",
-       "      <th>0</th>\n",
-       "      <th>1</th>\n",
-       "      <th>2</th>\n",
-       "      <th>3</th>\n",
-       "      <th>4</th>\n",
-       "      <th>5</th>\n",
-       "      <th>6</th>\n",
-       "      <th>7</th>\n",
-       "      <th>8</th>\n",
-       "      <th>9</th>\n",
-       "      <th>10</th>\n",
-       "      <th>11</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>(9863d9d83391, 9863d9d83391)</td>\n",
-       "      <td>2520eaaf5d79</td>\n",
-       "      <td>[(0, 1, 2, 6, 11, 12, 16, 23, 24, 25, 28, 29, ...</td>\n",
-       "      <td>0.75</td>\n",
-       "      <td>pulse</td>\n",
-       "      <td>0.25</td>\n",
-       "      <td>0.250000</td>\n",
-       "      <td>0.250000</td>\n",
-       "      <td>0.250000</td>\n",
-       "      <td>0.625000</td>\n",
-       "      <td>1.000000</td>\n",
-       "      <td>1.000000</td>\n",
-       "      <td>0.625000</td>\n",
-       "      <td>2.500000e-01</td>\n",
-       "      <td>2.500000e-01</td>\n",
-       "      <td>2.500000e-01</td>\n",
-       "      <td>2.500000e-01</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>(9863d9d83391, 40988b449b3f)</td>\n",
-       "      <td>966249f5ca9c</td>\n",
-       "      <td>[(3, 4, 5, 10, 13, 14, 15, 21, 26, 30, 31, 33,...</td>\n",
-       "      <td>0.50</td>\n",
-       "      <td>oscillate</td>\n",
-       "      <td>0.50</td>\n",
-       "      <td>0.750000</td>\n",
-       "      <td>1.000000</td>\n",
-       "      <td>0.750000</td>\n",
-       "      <td>0.500000</td>\n",
-       "      <td>0.750000</td>\n",
-       "      <td>1.000000</td>\n",
-       "      <td>0.750000</td>\n",
-       "      <td>5.000000e-01</td>\n",
-       "      <td>7.500000e-01</td>\n",
-       "      <td>1.000000e+00</td>\n",
-       "      <td>7.500000e-01</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>(9863d9d83391, 40988b449b3f)</td>\n",
-       "      <td>2520eaaf5d79</td>\n",
-       "      <td>[(0, 1, 2, 6, 11, 12, 16, 23, 24, 25, 28, 29, ...</td>\n",
-       "      <td>-0.75</td>\n",
-       "      <td>power</td>\n",
-       "      <td>0.75</td>\n",
-       "      <td>0.117014</td>\n",
-       "      <td>0.018256</td>\n",
-       "      <td>0.002848</td>\n",
-       "      <td>0.000444</td>\n",
-       "      <td>0.000069</td>\n",
-       "      <td>0.000011</td>\n",
-       "      <td>0.000002</td>\n",
-       "      <td>2.633124e-07</td>\n",
-       "      <td>4.108161e-08</td>\n",
-       "      <td>6.409494e-09</td>\n",
-       "      <td>1.000000e-09</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>(40988b449b3f, 40988b449b3f)</td>\n",
-       "      <td>966249f5ca9c</td>\n",
-       "      <td>[(3, 4, 5, 10, 13, 14, 15, 21, 26, 30, 31, 33,...</td>\n",
-       "      <td>-1.00</td>\n",
-       "      <td>linear</td>\n",
-       "      <td>1.00</td>\n",
-       "      <td>0.909091</td>\n",
-       "      <td>0.818182</td>\n",
-       "      <td>0.727273</td>\n",
-       "      <td>0.636364</td>\n",
-       "      <td>0.545455</td>\n",
-       "      <td>0.454545</td>\n",
-       "      <td>0.363636</td>\n",
-       "      <td>2.727273e-01</td>\n",
-       "      <td>1.818182e-01</td>\n",
-       "      <td>9.090909e-02</td>\n",
-       "      <td>0.000000e+00</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                    cell_subcat     LR_subcat  \\\n",
-       "0  (9863d9d83391, 9863d9d83391)  2520eaaf5d79   \n",
-       "1  (9863d9d83391, 40988b449b3f)  966249f5ca9c   \n",
-       "2  (9863d9d83391, 40988b449b3f)  2520eaaf5d79   \n",
-       "3  (40988b449b3f, 40988b449b3f)  966249f5ca9c   \n",
-       "\n",
-       "                                      ts_coordinates  change    pattern     0  \\\n",
-       "0  [(0, 1, 2, 6, 11, 12, 16, 23, 24, 25, 28, 29, ...    0.75      pulse  0.25   \n",
-       "1  [(3, 4, 5, 10, 13, 14, 15, 21, 26, 30, 31, 33,...    0.50  oscillate  0.50   \n",
-       "2  [(0, 1, 2, 6, 11, 12, 16, 23, 24, 25, 28, 29, ...   -0.75      power  0.75   \n",
-       "3  [(3, 4, 5, 10, 13, 14, 15, 21, 26, 30, 31, 33,...   -1.00     linear  1.00   \n",
-       "\n",
-       "          1         2         3         4         5         6         7  \\\n",
-       "0  0.250000  0.250000  0.250000  0.625000  1.000000  1.000000  0.625000   \n",
-       "1  0.750000  1.000000  0.750000  0.500000  0.750000  1.000000  0.750000   \n",
-       "2  0.117014  0.018256  0.002848  0.000444  0.000069  0.000011  0.000002   \n",
-       "3  0.909091  0.818182  0.727273  0.636364  0.545455  0.454545  0.363636   \n",
-       "\n",
-       "              8             9            10            11  \n",
-       "0  2.500000e-01  2.500000e-01  2.500000e-01  2.500000e-01  \n",
-       "1  5.000000e-01  7.500000e-01  1.000000e+00  7.500000e-01  \n",
-       "2  2.633124e-07  4.108161e-08  6.409494e-09  1.000000e-09  \n",
-       "3  2.727273e-01  1.818182e-01  9.090909e-02  0.000000e+00  "
-      ]
-     },
-     "execution_count": 46,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "sim.clrm"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 37,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "data_path = ''\n",
-    "import pickle\n",
-    "with open(data_path + 'sim_obj_v' + str(version) + '.pickle', 'wb') as f:\n",
-    "    pickle.dump(sim, f)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 26,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>cell_subcat</th>\n",
-       "      <th>LR_subcat</th>\n",
-       "      <th>change</th>\n",
-       "      <th>pattern</th>\n",
-       "      <th>0</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>(561ddae80d36, 561ddae80d36)</td>\n",
-       "      <td>93f61ac665f9</td>\n",
-       "      <td>0.75</td>\n",
-       "      <td>oscillate</td>\n",
-       "      <td>0.25</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>(561ddae80d36, 561ddae80d36)</td>\n",
-       "      <td>18232f0ba2ea</td>\n",
-       "      <td>0.50</td>\n",
-       "      <td>pulse</td>\n",
-       "      <td>0.50</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>(dfba567e03f7, 4fdda2194966)</td>\n",
-       "      <td>00e8b5e0bb94</td>\n",
-       "      <td>-0.75</td>\n",
-       "      <td>power</td>\n",
-       "      <td>0.75</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>(dfba567e03f7, dfba567e03f7)</td>\n",
-       "      <td>18232f0ba2ea</td>\n",
-       "      <td>-1.00</td>\n",
-       "      <td>linear</td>\n",
-       "      <td>1.00</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                    cell_subcat     LR_subcat  change    pattern     0\n",
-       "0  (561ddae80d36, 561ddae80d36)  93f61ac665f9    0.75  oscillate  0.25\n",
-       "1  (561ddae80d36, 561ddae80d36)  18232f0ba2ea    0.50      pulse  0.50\n",
-       "2  (dfba567e03f7, 4fdda2194966)  00e8b5e0bb94   -0.75      power  0.75\n",
-       "3  (dfba567e03f7, dfba567e03f7)  18232f0ba2ea   -1.00     linear  1.00"
-      ]
-     },
-     "execution_count": 26,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "sim.clrm.loc[:,['cell_subcat', 'LR_subcat', 'change', 'pattern', '0']]"
+    "                                             fontsize=14# filename=fig_path + 'TF_SIM_v' + str(version) + '.svg'\n",
+    "                                            )\n",
+    "sim.pickle(data_path + 'sim_obj_v' + str(version) + '.pickle')"
    ]
   },
   {
@@ -488,63 +214,53 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pickle\n",
-    "from cell2cell.tensor.factorization import _compute_norm_error\n",
+    "n_iter = 100 # of iterations per noise value\n",
+    "n_cores = 20 # number of cores for parallelization\n",
     "\n",
-    "version = 1"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 56,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "with open(data_path + 'sim_obj_v' + str(version) + '.pickle', 'rb') as f:\n",
     "    sim = pickle.load(f)\n",
     "\n",
-    "tensor_ = BaseTensor()\n",
-    "\n",
-    "\n",
-    "sim.generate_tensor_md(n_patterns = 4, n_conditions = 12, patterns = ['pulse', 'linear', 'oscillate', 'power'], \n",
-    "                      consider_homotypic = True, score_change = 'max')\n",
-    "sim.generate_tensor(noise = 0.1, binary = False, bulk = True, noise_max = None)\n",
-    "tensor_.tensor = sim.sim_tensor.tensor_cci\n",
-    "\n",
-    "r, err = _compute_norm_error(rank = sim.sim_tensor.rank, interaction_tensor = tensor_)"
+    "fn = data_path + 'error_vs_noise_' + str(version) + '.tab' # save results here\n",
+    "if not os.path.isfile(fn):\n",
+    "    with open(fn, 'w') as f:\n",
+    "        f.write('Noise' + '\\t' + 'Error' + '\\n')\n",
+    "else:\n",
+    "    raise ValueError('Unexpected results file already exists')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "with open('', 'a+') as f:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "''"
-      ]
-     },
-     "execution_count": 68,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "../../../scripts/simulation/simulate.py:650: UserWarning: Only continuous scoring is currently implemented\n",
+      "  warnings.warn('Only continuous scoring is currently implemented')\n",
+      "../../../scripts/simulation/simulate.py:704: FutureWarning: Using a non-tuple sequence for multidimensional indexing is deprecated; use `arr[tuple(seq)]` instead of `arr[seq]`. In the future this will be interpreted as an array index, `arr[np.array(seq)]`, which will result either in an error or a different result.\n",
+      "  df.values[coords] = utils.get_truncated_normal(n = len(coords[0]),\n"
+     ]
     }
    ],
    "source": [
-    "data_path"
+    "def get_error(noise):\n",
+    "    try:\n",
+    "        sim.generate_tensor(noise = noise, binary = False, bulk = True, noise_max = None)\n",
+    "        tensor_ = BaseTensor()\n",
+    "        tensor_.tensor = sim.sim_tensor.tensor_cci\n",
+    "\n",
+    "        r, err = _compute_norm_error(rank = sim.sim_tensor.rank, interaction_tensor = tensor_)\n",
+    "        with open(fn, 'a') as f:\n",
+    "            f.write(str(noise) + '\\t' + str(err) + '\\n')\n",
+    "    except:\n",
+    "        with open(fn, 'a') as f:\n",
+    "            f.write('fail' + '\\t' + 'fail' + '\\n')"
    ]
   },
   {
@@ -552,7 +268,21 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "for noise in list(np.arange(0.01,0.1, 0.01)) + list(np.arange(0.1,1.01,0.1)):\n",
+    "    print('------------------------------------------')\n",
+    "    print('Noise: {:.2f}'.format(noise))\n",
+    "    \n",
+    "    pool = multiprocessing.Pool(processes = n_cores)\n",
+    "    try:\n",
+    "        pool.map(get_error, [noise]*n_iter)\n",
+    "        pool.close()\n",
+    "        pool.join()\n",
+    "    except:\n",
+    "        pool.close()\n",
+    "        pool.join()\n",
+    "        raise ValueError('Parallelization failed at noise: {:.2f}'.format(noise))"
+   ]
   }
  ],
  "metadata": {
