additional example figures, fix communication scores > 1 for mu = 0

--- a/c2c_sim/notebooks/core/simulate.ipynb
+++ b/c2c_sim/notebooks/core/simulate.ipynb
@@ -133,7 +133,7 @@
     "        # group each LR into the categories above\n",
     "        # generate categories\n",
     "        LR_categories = [str(uuid.uuid4()).split('-')[-1] for i in range(len(n_LR_cats))]\n",
-    "        cat_bias = weight_bias(n = len(LR_categories), skew = 0)\n",
+    "        cat_bias = weight_bias(n = len(LR_categories), skew = cat_skew)\n",
     "        self.LR_metadata = pd.DataFrame(data = {'LR_id': self.edge_list, \n",
     "                        'category': random.choices(population = LR_categories, weights=cat_bias, \n",
     "                                                  k=len(self.edge_list))})\n",
@@ -164,14 +164,14 @@
     "                whether cells can interact with themselves\n",
     "            '''\n",
     "            # generate random cell ids\n",
-    "            self.cell_ids = [str(uuid.uuid4()).split('-')[-1] for i in range(n_cells)]\n",
+    "            self._cell_ids = [str(uuid.uuid4()).split('-')[-1] for i in range(n_cells)]\n",
     "            if directional:\n",
-    "                self.cell_interactions = list(itertools.permutations(self.cell_ids, 2))\n",
+    "                self.cell_interactions = list(itertools.permutations(self._cell_ids, 2))\n",
     "            else:\n",
-    "                self.cell_interactions = list(itertools.combinations(self.cell_ids, 2))\n",
+    "                self.cell_interactions = list(itertools.combinations(self._cell_ids, 2))\n",
     "            \n",
     "            if autocrine:\n",
-    "                self.cell_interactions += [(id_, id_) for id_ in self.cell_ids]\n",
+    "                self.cell_interactions += [(id_, id_) for id_ in self._cell_ids]\n",
     "    def generate_metadata(self, n_cell_cats = {2: 0}, cat_skew = 0, \n",
     "                         remove_homotypic = None):\n",
     "        '''Generate metadata groupings for the cells (individual). Categories are defined as distinct types of \n",
@@ -201,10 +201,10 @@
     "        # group each cell into the categories above\n",
     "        # generate categories\n",
     "        cell_categories = [str(uuid.uuid4()).split('-')[-1] for i in range(len(n_cell_cats))]\n",
-    "        cat_bias = weight_bias(n = len(cell_categories), skew = 0)\n",
-    "        self.cell_ids = pd.DataFrame(data = {'cell_id': self.cell_ids, \n",
+    "        cat_bias = weight_bias(n = len(cell_categories), skew = cat_skew)\n",
+    "        self.cell_ids = pd.DataFrame(data = {'cell_id': self._cell_ids, \n",
     "                        'category': random.choices(population = cell_categories, weights=cat_bias, \n",
-    "                                                  k=len(self.cell_ids))})\n",
+    "                                                  k=len(self._cell_ids))})\n",
     "        \n",
     "        # generate subcategories\n",
     "        self.cell_ids['subcategory'] = float('nan')\n",
@@ -289,7 +289,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -524,11 +524,11 @@
     "        \n",
     "        Parameters\n",
     "        ----------\n",
-    "        n_patterns: int (> 0)\n",
+    "        n_patterns: int (>0)\n",
     "            the number of CC - LR metadata pairs for which to form distinct interactions \n",
-    "            the remaining backgroun will default to 0, with noise increasing this value\n",
+    "            the remaining background will default to 0, with noise increasing this value\n",
     "            the groups with distinct interactions will each have distinct average values spaced b/w (0,1]\n",
-    "        n_conditions: int (>2)\n",
+    "        n_conditions: int (>=0)\n",
     "            the number of conditions across which to generate tensor slices \n",
     "        patterns: list\n",
     "            list of strings, each of which should be included as a potential pattern for a given cell \n",
@@ -643,7 +643,7 @@
     "        if self.n_conditions > 1:\n",
     "            self.clrm[[str(i) for i in range(self.n_conditions)]] = self.clrm[['pattern', 'change', '0']].apply(generate_pattern, args = (self.n_conditions,), axis = 1).tolist()\n",
     "\n",
-    "    def generate_tensor(self, noise, binary = False, bulk = False, noise_max = 0.1):\n",
+    "    def generate_tensor(self, noise, binary = False, bulk = False, noise_max = None):\n",
     "        '''Generates the tensor.\n",
     "        \n",
     "        Parameters\n",
@@ -657,7 +657,7 @@
     "            whether single-cells should be simulated (False) or cells should be grouped into metadata category (True)\n",
     "        noise_max: float [0,1]\n",
     "            the maximum average value of the background noise (@ noise = 1). If None, defaults to the minimum\n",
-    "            average communication score value at condition '0'\n",
+    "            average communication score value at condition '0'. Will likely fail at values > 0.1. \n",
     "        \n",
     "        Returns\n",
     "        ---------\n",
@@ -703,7 +703,7 @@
     "                for idx in self.clrm.index:\n",
     "                    avg_val = self.clrm.loc[idx, cond]\n",
     "                    coords = self.clrm.loc[idx, 'ts_coordinates']\n",
-    "                    df.values[coords] = avg_val # non-backgroun \n",
+    "                    df.values[coords] = avg_val # non-background \n",
     "                df.fillna(0, inplace = True) # background\n",
     "                self.ts[cond] = df\n",
     "        else:\n",
@@ -715,14 +715,25 @@
     "                # background\n",
     "                vals = utils.get_truncated_normal(n = self.ts_frame.shape[0]*self.ts_frame.shape[1], \n",
     "                                                  sd = noise*noise_max, mean = 0)*scale\n",
+    "                vals[vals>1] = 1\n",
     "                df[:] = vals.reshape(self.ts_frame.shape)\n",
     "                for idx in self.clrm.index: # non-background\n",
+    "                    vc = self.clrm.loc[idx,c_labels]\n",
+    "                    min_val = vc.min()\n",
     "                    avg_val = self.clrm.loc[idx, cond]\n",
-    "                    if avg_val == 0:\n",
-    "                        avg_val = 1e-9\n",
     "                    coords = self.clrm.loc[idx, 'ts_coordinates']\n",
-    "                    df.values[coords] = utils.get_truncated_normal(n = len(coords[0]), \n",
-    "                                                                   sd = noise*avg_val, mean = avg_val)\n",
+    "                    \n",
+    "                    # boundaries generated like background\n",
+    "                    if min_val == 0 and abs(min_val - avg_val) < 1e-3:\n",
+    "                        noise_max_ = vc[vc>0].min()\n",
+    "                        scale_ = noise_max_/np.array([utils.piecewise_fit(noise_max_, *utils.fit_params)])[0]\n",
+    "                        vals = utils.get_truncated_normal(n = len(coords[0]), \n",
+    "                                                  sd = noise*noise_max_, mean = 0)*scale_\n",
+    "                        vals[vals>1] = 1\n",
+    "                    else: # sd function of the average value\n",
+    "                        vals = utils.get_truncated_normal(n = len(coords[0]), \n",
+    "                                                                   sd = noise*avg_val*1.1, mean = avg_val)\n",
+    "                    df.values[coords] = vals\n",
     "                self.ts[cond] = df\n",
     "\n",
     "    def reshape(self):\n",
@@ -791,7 +802,7 @@
     "        return background_coords\n",
     "    \n",
     "    def visualize(self, subset = None, include_background = True, background_coords = None, \n",
-    "                 file_name = None):\n",
+    "                 file_name = None, colors = None):\n",
     "        '''Generate lineplot of communication score across conditions for each pattern\n",
     "        Parameters\n",
     "        ----------\n",
@@ -805,6 +816,8 @@
     "            Formatted to allow easy subsetting of numpy matrix\n",
     "        file_name: str\n",
     "            File name to save figure. \"full/path/to/filename.ext\". If None, will not save\n",
+    "        colors: list\n",
+    "            Length = n_patterns. Each element is a color to assign to one of patterns. \n",
     "        \n",
     "        '''\n",
     "        if include_background and background_coords is None:\n",
@@ -827,32 +840,38 @@
     "\n",
     "        res_all.reset_index(inplace = True, drop = True)\n",
     "        res_all['score'] = res_all['score'].astype(float)\n",
-    "        \n",
+    "\n",
     "        if subset is not None:\n",
     "            res_all = res_all.loc[random.sample(res_all.index.tolist(), k = round(subset*res_all.shape[0])),]\n",
     "            res_all.reset_index(inplace = True, drop = True)\n",
     "\n",
     "        cats = res_all.cat.unique().tolist()\n",
+    "\n",
     "        if include_background:\n",
     "            cats.remove('background')\n",
     "        cat_ordering = [str(int(j)) for j in sorted([int(i) for i in cats])]\n",
     "        if include_background:\n",
-    "            cats = ['background'] + cats\n",
+    "            cat_ordering = ['background'] + cat_ordering\n",
     "        res_all[\"cat\"] = pd.Categorical(res_all[\"cat\"], categories=cat_ordering) \n",
     "\n",
     "        cond_ordering = [str(int(j)) for j in sorted([int(i) for i in res_all.condition.unique()])]\n",
     "        res_all[\"condition\"] = pd.Categorical(res_all[\"condition\"], categories=cond_ordering) \n",
-    "        \n",
+    "\n",
     "        print('Generate graph')\n",
-    "        colors = sns.color_palette(\"tab10\")[:len(res_all.cat.unique())]\n",
+    "        if colors is None:\n",
+    "            if len(cats) > 10:\n",
+    "                raise ValueError('You have assigned more than 10 colors and must provide a palette to colors')\n",
+    "            colors = sns.color_palette(\"tab10\")[:len(cat_ordering)]\n",
+    "        else:\n",
+    "            colors = colors\n",
     "\n",
     "        fig, ax = plt.subplots(figsize = (10,5))\n",
     "        sns.lineplot(data = res_all, y = 'score', x = 'condition', hue =  'cat', palette = colors,\n",
     "                     ax = ax)\n",
     "\n",
     "        handles, labels = ax.get_legend_handles_labels()\n",
-    "        labels = [labels[0]] + ['{:.2f}'.format(float(i)) for i in labels[1:]]\n",
-    "        ax.legend(labels=labels, handles = handles,bbox_to_anchor=(-0.1, 1), title = 'CC-LR groups')\n",
+    "        labels = [labels[0]] + ['{:.0f}'.format(float(i)) for i in labels[1:]]\n",
+    "        ax.legend(labels=labels, handles = handles,bbox_to_anchor=(-0.1, 1), title = 'CC-LR subcategory pair')\n",
     "\n",
     "        if file_name is not None:\n",
     "            plt.savefig(file_name, bbox_to_inches = 'tight')\n",
@@ -873,6 +892,13 @@
     "        with open(filename, 'wb') as f:\n",
     "            pickle.dump(self, f)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
