max background score error v noise

--- a/explore/noise_v_errorp1.ipynb
+++ b/explore/noise_v_errorp1.ipynb
@@ -79,8 +79,11 @@
     "fn_0 = data_path + 'error_vs_noise_' + str(version) + '_noise0_001.tab' # save results here\n",
     "fn_1 = data_path + 'error_vs_noise_' + str(version) + '_noise0_01.tab' # save results here\n",
     "fn_2 = data_path + 'error_vs_noise_' + str(version) + '_noise0_05.tab' # save results here\n",
-    "fn_3 = data_path + 'error_vs_noise_' + str(version) + '_noise0_25.tab' # save results here\n",
-    "fns = [fn_0,fn_1,fn_2,fn_3]\n",
+    "fn_3 = data_path + 'error_vs_noise_' + str(version) + '_noise0_10.tab' # save results here\n",
+    "fn_4 = data_path + 'error_vs_noise_' + str(version) + '_noise0_15.tab' # save results here\n",
+    "fn_5 = data_path + 'error_vs_noise_' + str(version) + '_noise0_20.tab' # save results here\n",
+    "fn_6 = data_path + 'error_vs_noise_' + str(version) + '_noise0_25.tab' # save results here\n",
+    "fns = [fn_0,fn_1,fn_2,fn_3, fn_4, fn_5, fn_6]\n",
     "\n",
     "for fn in fns:\n",
     "    if not os.path.isfile(fn):\n",
@@ -157,7 +160,7 @@
    "outputs": [],
    "source": [
     "counter = 0\n",
-    "for nm in [0.001, 0.01, 0.05,0.25]:\n",
+    "for nm in [0.001, 0.01, 0.05, 0.1, 0.15, 0.20, 0.25]:\n",
     "    print('Cap background noise at {:.2f}'.format(nm))\n",
     "    for noise in list(np.arange(0.01,0.1, 0.01)) + list(np.arange(0.1,1.01,0.1)):\n",
     "        print('------------------------------------------')\n",
