set seeds for reproducibility

--- a/c2c_sim/notebooks/core/bigraph_r.ipynb
+++ b/c2c_sim/notebooks/core/bigraph_r.ipynb
@@ -2,14 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "#! /usr/bin/env Rscript\n",
     "'Generate a scale-free, undirected, bipartite graph\n",
     "Usage:\n",
-    "    bigraph_r.r --beta=<float> --nodes=<int> --degrees=<int> [--output=<./bipiartite_sf.csv>] [--edges=<int>]\n",
+    "    bigraph_r.r --beta=<float> --nodes=<int> --degrees=<int> [--output=<./bipiartite_sf.csv>] [--edges=<int>] [--seed=<int>]\n",
     "    \n",
     "Options:\n",
     "    -h --help  Show this screen.\n",
@@ -18,12 +18,13 @@
     "    --degrees=<int>  average degree of nodes \n",
     "    --output=<str> output filename with path [default: ./bipartite_sf.csv]\n",
     "    --edges=<int>  number of (directed) edges\n",
+    "    --seed=<int>  set a seed for random graph generation \n",
     "' -> doc"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,12 +38,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
     "opts = docopt(doc)\n",
-    "for (opt in c('nodes', 'edges', 'degrees', 'beta')){\n",
+    "for (opt in c('nodes', 'edges', 'degrees', 'beta', 'seed')){\n",
     "    val = opts[[opt]]\n",
     "    if (!is.null(val)){\n",
     "        opts[[opt]] = as.numeric(val)\n",
@@ -56,7 +57,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "bg_sf<-function(n1, beta, k, fn, m){\n",
+    "bg_sf<-function(n1, beta, k, fn, m, seed){\n",
+    "    set.seed(seed)\n",
     "    B = BiGraph$new(n1=n1, beta=beta, k=k, m=m, \n",
     "                    type = 'bipartite_sf', directed = F, is_adj = T)\n",
     "    G = B$get_graph()\n",
@@ -70,7 +72,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "bg_sf(n1=opts[['nodes']], beta=opts[['beta']], k = opts[['degrees']], fn = opts[['output']], m = opts[['edges']])"
+    "bg_sf(n1=opts[['nodes']], beta=opts[['beta']], k = opts[['degrees']], fn = opts[['output']], m = opts[['edges']], \n",
+    "     seed = opts[['seed']])"
    ]
   }
  ],
