--- a/c2c_sim/notebooks/core/utils.ipynb
+++ b/c2c_sim/notebooks/core/utils.ipynb
@@ -7,42 +7,49 @@
    "outputs": [],
    "source": [
     "import pandas as pd\n",
+    "import random\n",
     "import numpy as np\n",
     "from scipy import optimize\n",
     "import numpy as np\n",
-    "from scipy.stats import truncnorm"
+    "from scipy.stats import truncnorm\n",
+    "import itertools"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def get_truncated_normal(n, sd, mean=0, low=0, upp=1):\n",
+    "def get_truncated_normal(n, sd, mean=0, low=0, upp=1, seed = None):\n",
+    "    np.random.seed(seed) # reproducibility\n",
     "    return truncnorm(\n",
-    "        (low - mean) / sd, (upp - mean) / sd, loc=mean, scale=sd).rvs(n)\n"
+    "        (low - mean) / sd, (upp - mean) / sd, loc=mean, scale=sd).rvs(n)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/home/hratch/anaconda3/lib/python3.7/site-packages/scipy/optimize/minpack.py:799: OptimizeWarning: Covariance of the parameters could not be estimated\n",
-      "  category=OptimizeWarning)\n"
+      "/home/hratch/anaconda3/envs/cci_dt/lib/python3.9/site-packages/scipy/optimize/minpack.py:828: OptimizeWarning: Covariance of the parameters could not be estimated\n",
+      "  warnings.warn('Covariance of the parameters could not be estimated',\n"
      ]
     }
    ],
    "source": [
     "relat = pd.DataFrame(columns = ['mean', 'noise_mean'])\n",
     "counter = 0\n",
-    "for mean in np.arange(0.01,1,0.001):\n",
-    "    relat.loc[counter,:] = [mean, np.mean(get_truncated_normal(n = 10**5, sd = mean))] # noise = 1\n",
+    "iter_ = np.arange(0.01,1,0.001)\n",
+    "seeds = list(range(len(iter_))) # reproducibility\n",
+    "\n",
+    "for mean in iter_:\n",
+    "    relat.loc[counter,:] = [mean, np.mean(get_truncated_normal(n = 10**5, sd = mean, \n",
+    "                                                               seed = seeds[counter]))] # noise = 1\n",
     "    counter += 1\n",
     "\n",
     "y = relat['noise_mean'].astype(float).values\n",
@@ -54,6 +61,107 @@
     "fit_params , e = optimize.curve_fit(piecewise_fit, x, y, \n",
     "                          p0 = [0.37, 7.93278070e-01, 5.11093685e-04, \n",
     "                               6.21557667, 78.41240029, 0.34450856])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def fold_change_pattern(initial_value, score_change = 'max'):\n",
+    "    '''The maximum change in the average LR score given the starting value'''\n",
+    "    decrease = False\n",
+    "    if initial_value > 0.5:\n",
+    "        initial_value = 0.5 - (initial_value - 0.5)\n",
+    "        decrease = True\n",
+    "    \n",
+    "    if score_change == 'max':\n",
+    "        change = 1 - initial_value\n",
+    "    elif score_change == 'scale':\n",
+    "        if initial_value >= 0.2:\n",
+    "            change = 2*initial_value\n",
+    "        else:\n",
+    "            change = initial_value + 0.2\n",
+    "        change = change - initial_value\n",
+    "    else:\n",
+    "        raise ValueError('Argument score_change can only be \"scale\" or \"max\"')\n",
+    "    \n",
+    "    if decrease:\n",
+    "        change = - change\n",
+    "    \n",
+    "    return change\n",
+    "\n",
+    "def linear(x, n_conditions):\n",
+    "    return list(np.linspace(x[1], x[1] + x[0], n_conditions))\n",
+    "\n",
+    "def fit_increasing_power(x,adj1,adj2,pw):\n",
+    "    return ((x+adj1) ** pw) * adj2\n",
+    "\n",
+    "def power(x, n_conditions):\n",
+    "    change, initial_val = x[0], x[1]\n",
+    "    if change > 0: \n",
+    "        # https://stackoverflow.com/questions/33186740/fitting-exponential-function-through-two-data-points-with-scipy-curve-fit\n",
+    "        p1 = [1, n_conditions] \n",
+    "        p2 = [initial_val, initial_val + change]\n",
+    "\n",
+    "        pw = 0.2\n",
+    "        A = np.exp(np.log(p2[0]/p2[1])/pw)\n",
+    "        a = (p1[0] - p1[1]*A)/(A-1)\n",
+    "        b = p2[0]/(p1[0]+a)**pw\n",
+    "        xf=np.linspace(1,n_conditions, n_conditions)\n",
+    "        vector = fit_increasing_power(xf, a, b, pw)\n",
+    "    else:\n",
+    "        if initial_val + change == 0:\n",
+    "            vector = np.geomspace(initial_val, initial_val + change + 1e-9, num=n_conditions)\n",
+    "        else:\n",
+    "            vector = np.geomspace(initial_val, initial_val + change, num=n_conditions)\n",
+    "    return vector\n",
+    "\n",
+    "def pulse(x, n_conditions):\n",
+    "    change = x[0]\n",
+    "    initial_val = x[1]\n",
+    "    \n",
+    "    vector = [initial_val] * n_conditions # initialize\n",
+    "    \n",
+    "    if n_conditions % 2 == 1:\n",
+    "        mid_point = [math.floor(n_conditions/2)]\n",
+    "    else:\n",
+    "        mid_point = [n_conditions/2 - 1, n_conditions/2]\n",
+    "\n",
+    "    periph = None\n",
+    "    if n_conditions >= 5: \n",
+    "        periph = [min(mid_point)-1, max(mid_point)+1]\n",
+    "    \n",
+    "    for m in mid_point:\n",
+    "        vector[int(m)] = initial_val + change\n",
+    "    if periph is not None:\n",
+    "        for p in periph:\n",
+    "            vector[int(p)] = initial_val + (change*0.5)\n",
+    "    return vector\n",
+    "\n",
+    "def oscillate(x, n_conditions):\n",
+    "    osc_period = 3\n",
+    "    if n_conditions > 3:\n",
+    "        iter_vals = list(np.linspace(x[1], x[1] + x[0], osc_period))\n",
+    "        iter_vals += [iter_vals[1]]#iter_vals[1:-1][::-1]\n",
+    "\n",
+    "        vector = list()\n",
+    "        for i,j in enumerate(itertools.cycle(iter_vals)):\n",
+    "            vector.append(j)\n",
+    "            if i >= n_conditions - 1:\n",
+    "                break\n",
+    "        return vector\n",
+    "    else:\n",
+    "        return pulse(x, n_conditions)\n",
+    "\n",
+    "pattern_mapper = {'linear': linear, 'pulse': pulse, 'oscillate': oscillate, \n",
+    "                 'power': power}\n",
+    "\n",
+    "def generate_pattern(x, n_conditions):\n",
+    "    vector = pattern_mapper[x[0]](x[1:], n_conditions)\n",
+    "    vector[0] = x[2]\n",
+    "    return vector"
    ]
   }
  ],
@@ -73,7 +181,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.9"
+   "version": "3.9.1"
   }
  },
  "nbformat": 4,
