--- a/c2c_sim/notebooks/core/graphs.ipynb
+++ b/c2c_sim/notebooks/core/graphs.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,7 +17,18 @@
     "import pandas as pd\n",
     "import numpy as np\n",
     "from collections import OrderedDict\n",
-    "import random"
+    "import random\n",
+    "\n",
+    "# notebook\n",
+    "import sys\n",
+    "sys.path.append(\"../..\")\n",
+    "from definitions import ROOT_DIR\n",
+    "\n",
+    "# # script version\n",
+    "# path_ = os.path.realpath(os.path.join(os.getcwd(), os.path.dirname(__file__), '../'))\n",
+    "# import sys\n",
+    "# sys.path.insert(1, path_)\n",
+    "# from definitions import ROOT_DIR"
    ]
   },
   {
@@ -27,10 +38,18 @@
    "outputs": [],
    "source": [
     "class graph_generator():\n",
-    "    def __init__(self):\n",
-    "        '''Initializer for generating and analyzing various networks'''\n",
+    "    def __init__(self, seed = None):\n",
+    "        '''Initializer for generating and analyzing various networks\n",
+    "        \n",
+    "        Parameters\n",
+    "        ----------\n",
+    "        seed: int, optional\n",
+    "            value to set seed for graph output\n",
+    "        '''\n",
+    "        self.seed = seed\n",
     "    \n",
-    "    def bipartite_sf(self, nodes, degrees, alpha = 2, edges = None, check_properties = True, compare_barabasi = True):\n",
+    "    def bipartite_sf(self, nodes, degrees, alpha = 2, edges = None, seed = None, \n",
+    "                     check_properties = True, compare_barabasi = True):\n",
     "        '''Wraps bigraph_r and retrieves properties from the resultant random, undirected, scale-free, bipartite network\n",
     "\n",
     "        Parameters\n",
@@ -43,6 +62,8 @@
     "            scale-free exponent for network degree distribution (recommended 2<alpha<3)\n",
     "        edges: int, optional\n",
     "            number of (directed) edges\n",
+    "        seed: int, optional\n",
+    "            set a seed for random graph output\n",
     "        check_properties: bool\n",
     "            checks network properties (scale-free power distribution, undirected)\n",
     "        compare_barabasi: bool\n",
@@ -60,30 +81,28 @@
     "        comp: pd.DataFrame or None\n",
     "            summary of differences in network properties between  bipartite network and similar Barabasi network\n",
     "        '''\n",
-    "    #     beta: float\n",
-    "    #         fitness of node, alpha = 1 / beta + 1, alpha is scale-free exponent\n",
-    "    #     beta = (1/alpha)-1\n",
     "\n",
-    "        output = tempfile.mkstemp(suffix = '_bipartite_sf.csv', dir = './')[1]\n",
-    "#         output = tempfile.mkstemp(suffix = '_bipartite_sf.csv', \n",
-    "#                                   dir = 'abspath')[1]\n",
-    "        print(output)\n",
+    "        curdir = os.path.dirname(os.path.abspath(os.curdir)) ##### set to bigraph_r directory\n",
+    "        os.chdir(ROOT_DIR + '/core/')\n",
+    "        output = tempfile.mkstemp(suffix = '_bipartite_sf.csv', dir = os.getcwd())[1]\n",
     "        beta = alpha\n",
     "        cmd = 'Rscript bigraph_r.r ' + '--beta=' + str(beta) + ' --nodes=' + str(nodes) + ' --degrees=' + str(degrees)\n",
     "        cmd += ' --output=' + str(output) \n",
     "        if edges is not None:\n",
     "            cmd += ' --edges=' + str(edges)\n",
+    "        if self.seed is not None:\n",
+    "            cmd += ' --seed=' + str(self.seed)\n",
     "\n",
     "        print('Generate undirected, bipartite, scale-free graph')\n",
     "        os.system(cmd)\n",
     "\n",
-    "        # format adjacency matrix\n",
-    "#         os.chdir(abspath)\n",
-    "#         adj_matrix = pd.read_csv(os.path.join('../../scripts/simulation', os.path.basename(output)), index_col = 0)\n",
     "        adj_matrix = pd.read_csv(output, index_col = 0)\n",
-    "#         os.chdir(curdir)\n",
+    "        try:\n",
+    "            os.remove(output)\n",
+    "        except:\n",
+    "            warnings.warn('Graph output file not found')\n",
+    "        os.chdir(curdir) ##### reset to current directory\n",
     "       \n",
-    "        os.remove(output)\n",
     "        adj_matrix.index = adj_matrix.index -1 # 0 indexing\n",
     "        adj_matrix.columns = adj_matrix.index\n",
     "\n",
@@ -300,6 +319,8 @@
     "        if nodes is None:\n",
     "            if subset_size is None or subset_size >= 1 or subset_size <= 0:\n",
     "                raise ValueError('Must specify an appropriate subset size when nodes is not specified')\n",
+    "            \n",
+    "            random.seed(self.seed)\n",
     "            nodes = random.sample(G.nodes, round(len(G.nodes)*(1-subset_size)))\n",
     "        \n",
     "        _G.remove_nodes_from(nodes)\n",
@@ -329,73 +350,13 @@
     "        if edges is None:\n",
     "            if subset_size is None or subset_size >= 1 or subset_size <= 0:\n",
     "                raise ValueError('Must specify an appropriate subset size when nodes is not specified')\n",
+    "            random.seed(self.seed)\n",
     "            edges = random.sample(G.edges, round(len(G.edges)*(1-subset_size)))\n",
     "\n",
     "        _G.remove_edges_from(edges)\n",
     "        if drop:\n",
     "            self.drop_disconnected_nodes(_G)\n",
     "        return _G"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "gg = graph_generator()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "/home/hratch/Projects/cci_dt/notebooks/simulation/tmplffv128e_bipartite_sf.csv\n",
-      "Generate undirected, bipartite, scale-free graph\n"
-     ]
-    },
-    {
-     "ename": "EmptyDataError",
-     "evalue": "No columns to parse from file",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mEmptyDataError\u001b[0m                            Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-6-df48ee1d9344>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mgg\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mbipartite_sf\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mnodes\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;36m100\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdegrees\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;36m3\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0malpha\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;36m2\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;32m<ipython-input-3-60ea1b2f3593>\u001b[0m in \u001b[0;36mbipartite_sf\u001b[0;34m(self, nodes, degrees, alpha, edges, check_properties, compare_barabasi)\u001b[0m\n\u001b[1;32m     53\u001b[0m \u001b[0;31m#         os.chdir(abspath)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     54\u001b[0m \u001b[0;31m#         adj_matrix = pd.read_csv(os.path.join('../../scripts/simulation', os.path.basename(output)), index_col = 0)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 55\u001b[0;31m         \u001b[0madj_matrix\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mpd\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mread_csv\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0moutput\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mindex_col\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;36m0\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     56\u001b[0m \u001b[0;31m#         os.chdir(curdir)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     57\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m~/anaconda3/envs/cci_dt/lib/python3.9/site-packages/pandas/io/parsers.py\u001b[0m in \u001b[0;36mread_csv\u001b[0;34m(filepath_or_buffer, sep, delimiter, header, names, index_col, usecols, squeeze, prefix, mangle_dupe_cols, dtype, engine, converters, true_values, false_values, skipinitialspace, skiprows, skipfooter, nrows, na_values, keep_default_na, na_filter, verbose, skip_blank_lines, parse_dates, infer_datetime_format, keep_date_col, date_parser, dayfirst, cache_dates, iterator, chunksize, compression, thousands, decimal, lineterminator, quotechar, quoting, doublequote, escapechar, comment, encoding, dialect, error_bad_lines, warn_bad_lines, delim_whitespace, low_memory, memory_map, float_precision, storage_options)\u001b[0m\n\u001b[1;32m    608\u001b[0m     \u001b[0mkwds\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mupdate\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mkwds_defaults\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    609\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 610\u001b[0;31m     \u001b[0;32mreturn\u001b[0m \u001b[0m_read\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mfilepath_or_buffer\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mkwds\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    611\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    612\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m~/anaconda3/envs/cci_dt/lib/python3.9/site-packages/pandas/io/parsers.py\u001b[0m in \u001b[0;36m_read\u001b[0;34m(filepath_or_buffer, kwds)\u001b[0m\n\u001b[1;32m    460\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    461\u001b[0m     \u001b[0;31m# Create the parser.\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 462\u001b[0;31m     \u001b[0mparser\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mTextFileReader\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mfilepath_or_buffer\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m**\u001b[0m\u001b[0mkwds\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    463\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    464\u001b[0m     \u001b[0;32mif\u001b[0m \u001b[0mchunksize\u001b[0m \u001b[0;32mor\u001b[0m \u001b[0miterator\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m~/anaconda3/envs/cci_dt/lib/python3.9/site-packages/pandas/io/parsers.py\u001b[0m in \u001b[0;36m__init__\u001b[0;34m(self, f, engine, **kwds)\u001b[0m\n\u001b[1;32m    817\u001b[0m             \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0moptions\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m\"has_index_names\"\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mkwds\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m\"has_index_names\"\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    818\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 819\u001b[0;31m         \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_engine\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_make_engine\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mengine\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    820\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    821\u001b[0m     \u001b[0;32mdef\u001b[0m \u001b[0mclose\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m~/anaconda3/envs/cci_dt/lib/python3.9/site-packages/pandas/io/parsers.py\u001b[0m in \u001b[0;36m_make_engine\u001b[0;34m(self, engine)\u001b[0m\n\u001b[1;32m   1048\u001b[0m             )\n\u001b[1;32m   1049\u001b[0m         \u001b[0;31m# error: Too many arguments for \"ParserBase\"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 1050\u001b[0;31m         \u001b[0;32mreturn\u001b[0m \u001b[0mmapping\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mengine\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mf\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m**\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0moptions\u001b[0m\u001b[0;34m)\u001b[0m  \u001b[0;31m# type: ignore[call-arg]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   1051\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1052\u001b[0m     \u001b[0;32mdef\u001b[0m \u001b[0m_failover_to_python\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m~/anaconda3/envs/cci_dt/lib/python3.9/site-packages/pandas/io/parsers.py\u001b[0m in \u001b[0;36m__init__\u001b[0;34m(self, src, **kwds)\u001b[0m\n\u001b[1;32m   1896\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1897\u001b[0m         \u001b[0;32mtry\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 1898\u001b[0;31m             \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_reader\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mparsers\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mTextReader\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mhandles\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mhandle\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m**\u001b[0m\u001b[0mkwds\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   1899\u001b[0m         \u001b[0;32mexcept\u001b[0m \u001b[0mException\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1900\u001b[0m             \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mhandles\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mclose\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32mpandas/_libs/parsers.pyx\u001b[0m in \u001b[0;36mpandas._libs.parsers.TextReader.__cinit__\u001b[0;34m()\u001b[0m\n",
-      "\u001b[0;31mEmptyDataError\u001b[0m: No columns to parse from file"
-     ]
-    }
-   ],
-   "source": [
-    "output = tempfile.mkstemp(suffix = '_bipartite_sf.csv', dir = './')[1]\n",
-    "#         output = tempfile.mkstemp(suffix = '_bipartite_sf.csv', \n",
-    "#                                   dir = 'abspath')[1]\n",
-    "print(output)\n",
-    "beta = alpha\n",
-    "cmd = 'Rscript bigraph_r.r ' + '--beta=' + str(beta) + ' --nodes=' + str(nodes) + ' --degrees=' + str(degrees)\n",
-    "cmd += ' --output=' + str(output) \n",
-    "if edges is not None:\n",
-    "    cmd += ' --edges=' + str(edges)\n",
-    "\n",
-    "print('Generate undirected, bipartite, scale-free graph')\n",
-    "os.system(cmd)\n",
-    "\n",
-    "# format adjacency matrix\n",
-    "#         os.chdir(abspath)\n",
-    "#         adj_matrix = pd.read_csv(os.path.join('../../scripts/simulation', os.path.basename(output)), index_col = 0)\n",
-    "adj_matrix = pd.read_csv(output, index_col = 0)"
    ]
   },
   {
